...
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#ffffffff"/>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/event_detail_list"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    </ListView>
</LinearLayout>
