...
<View
    android:layout_width="fill_parent"
    android:layout_height="2dip"
    android:background="#ff000000"/>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/eventlist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>
</LinearLayout>
