...
    <string name="action_edit_favorites">Favorit verwalten</string>
    <string name="action_filter">Filter</string>
    <string name="text_appointment_selection">Du kannst unten die nächsten Termine von dir sehen, wähle einen aus, dann
        kannst du einen Spieler aus gegnerischen Mannschaft auswählen
    </string>
    <string name="clublist">Vereinsrangl.</string>
    <string name="statistik">Statistiken</string>
    <string name="player_sim">Simulation</string>
    <string name="search">Suche</string>
    <string name="spielplan">Spielplan</string>
    <string name="aufstellung">Aufstellung</string>
    <string name="tabelle">Tabelle</string>
    <string name="sample_nameclub">"Wolfgang Heinzelmann\n1. FC Bayer Uerdingen"</string>
...
